--- a/ANGULAR/firstProject/src/app/app.component.html
+++ b/ANGULAR/firstProject/src/app/app.component.html
@@ -363,6 +363,15 @@
 <app-my-first-component></app-my-first-component>
 <app-data-binding></app-data-binding>
 <app-ng-for-example></app-ng-for-example>
+<app-ng-if-example></app-ng-if-example>
+<app-ng-model></app-ng-model>
+<app-product-component></app-product-component>
+<app-get-request-component></app-get-request-component>
+<app-ng-switchcase></app-ng-switchcase>
+<app-built-in-pipes></app-built-in-pipes>
+<app-custom-pipe></app-custom-pipe>
+<app-parameterized-pipe></app-parameterized-pipe>
+<app-multiple-parameter-pipe></app-multiple-parameter-pipe>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
